# hybrid-monorepo

./: .gitignore  BUILD.web  Makefile  README.md  go.work  mypy.ini  package.json  pants.toml  pnpm-lock.yaml  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: 01.development-setup.md  02_01.quick-add-go-service.md  02_02.quick-add-python-service.md  02_1.adding-go-service.md  02_2.adding-python-service.md
services/go/: go.work
services/go/detection/: go.mod
services/go/detection/cmd/detection/: main.go
services/go/gateway/: go.mod
services/go/gateway/cmd/gateway/: main.go
services/go/gateway/internal/handler/: handler.go
services/go/pkg/: go.mod
services/go/pkg/errors/: errors.go
services/go/pkg/logger/: logger.go
services/python/agents/investigation/: pyproject.toml
services/python/agents/investigation/src/: __init__.py  main.py
services/python/agents/investigation/tests/: __init__.py  test_main.py
services/python/compare_data/: README.md  lgu_serial.csv  plan.md  pyproject.toml
services/python/compare_data/output/: comparison_report_20260303_224428.xlsx  comparison_report_20260303_224649.xlsx  comparison_report_20260303_225050.xlsx  comparison_report_20260304_002425.xlsx  comparison_report_20260304_002732.xlsx  comparison_report_20260304_150327.xlsx  comparison_report_20260304_151123.xlsx  comparison_report_20260304_151535.xlsx  comparison_report_20260304_155156.xlsx  제품비교_2025년이후_v0.1.xlsx  제품비교_LGU전체_v0.1.xlsx
services/python/compare_data/src/: __init__.py  __main__.py
services/python/compare_data/src/application/: __init__.py  compare_usecase.py  ports.py
services/python/compare_data/src/cli/: __init__.py  commands.py
services/python/compare_data/src/config/: __init__.py  settings.py
services/python/compare_data/src/domain/: __init__.py  aggregator.py  comparator.py  exceptions.py  models.py
services/python/compare_data/src/infrastructure/: __init__.py  csv_reader.py  db_reader.py  report_writer.py
services/python/compare_data/src/lgu_data_compare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/python/compare_data/tests/: __init__.py  conftest.py
services/python/compare_data/tests/integration/: test_compare_flow.py
services/python/compare_data/tests/unit/: test_cli.py  test_config.py
services/python/compare_data/tests/unit/domain/: test_aggregator.py  test_comparator.py
services/python/compare_data/tests/unit/infrastructure/: __init__.py  test_csv_reader.py  test_db_reader.py  test_report_writer.py
services/python/copilot/: pyproject.toml
services/python/copilot/src/: __init__.py  main.py
services/python/copilot/tests/: __init__.py  test_main.py
services/python/triage/: pyproject.toml
services/python/triage/src/: __init__.py  main.py
services/python/triage/tests/: __init__.py  test_main.py
shared/api-schema/: openapi.yaml
web/: package.json  pnpm-lock.yaml  turbo.json
