[project]
name = "investigation-agent"
version = "0.1.0"
description = "AI agent for security investigation automation"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "langgraph>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
